Fix Overflow issue

--- a/layouts/default.scss
+++ b/layouts/default.scss
@@ -3,4 +3,5 @@ $l-layout-sidebar: 150px;
 .l-default {
   position: relative;
   background-color: black;
+  overflow: hidden;
 }
